sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:10: error: not found: value i
    i=0
    ^AlgCombSort:12: error: not found: value i
    while(i+ecart < a){
          ^AlgCombSort:13: error: not found: value i
      if (plusPetit(i+ecart,i)==true){
                    ^AlgCombSort:13: error: not found: value i
      if (plusPetit(i+ecart,i)==true){
                            ^AlgCombSort:14: error: not found: value i
        echange(i+ecart,i)
                ^AlgCombSort:14: error: not found: value i
        echange(i+ecart,i)
                        ^AlgCombSort:17: error: not found: value i
      i=i+1
      ^